RESOLVED FIXED156988
[GTK] Overlay scrollbars with steppers enabled render incorrectly
https://bugs.webkit.org/show_bug.cgi?id=156988
Summary [GTK] Overlay scrollbars with steppers enabled render incorrectly
Adrian Perez
Reported 2016-04-25 12:18:39 PDT
Created attachment 277265 [details] Incorrect on-hover scrollbar using the Zukitre theme When hovering with the mouse over a scrollbar in Epiphany (or any other application which uses WebKitGTK+) with certain themes the scrollbar will get thicker than in normal (non-hovered) state. This happens both with vertical and horizontal scrollbars, and also with scrollbars nested in an <iframe> or in an HTML element which has “overflow: scroll” in its CSS rules. First I thought that this was an issue with the Zukitre theme, but the author of the theme noticed that setting “-GtkScrollbar-has-backward-stepper” and “-GtkScrollbar-has-forward-stepper” to “true” seems to cause this issue in any theme. More info: https://github.com/lassekongo83/zuki-themes/issues/62
Attachments
Incorrect on-hover scrollbar using the Zukitre theme (5.47 KB, image/png)
2016-04-25 12:18 PDT, Adrian Perez
no flags
Patch (28.20 KB, patch)
2016-04-26 05:14 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-04-25 23:16:23 PDT
I'm not surprised, steppers are untested, becase I had no idea how to test them :-P Has that Zukitre theme been adapted to new CSS in GTK 3.20 then?
Adrian Perez
Comment 2 2016-04-26 00:59:32 PDT
Yes, the Zukitre theme is updated for GTK+ 3.20 and uses steppers. You can install it from the “master” branch o the Git repository for testing this.
Carlos Garcia Campos
Comment 3 2016-04-26 05:14:14 PDT
Michael Catanzaro
Comment 4 2016-04-26 06:01:20 PDT
Please throw this into 2.12.2 unreviewed; I'll look at it for trunk maybe tomorrow.
Carlos Garcia Campos
Comment 5 2016-04-26 06:03:38 PDT
(In reply to comment #4) > Please throw this into 2.12.2 unreviewed; I'll look at it for trunk maybe > tomorrow. No problem, I can wait for 2.12.2, I should also release 2.13.1 this week from trunk
Michael Catanzaro
Comment 6 2016-04-27 14:04:44 PDT
Comment on attachment 277356 [details] Patch The theme code has reached the point where I hardly understand it anymore. :(
Carlos Garcia Campos
Comment 7 2016-04-27 23:19:54 PDT
Note You need to log in before you can comment on or make changes to this bug.