Source/WebCore/platform/gtk/RenderThemeGadget.h
@@ -75,8 +75,9 @@ public:
     Color backgroundColor() const;
     double opacity() const;
 
-protected:
     GtkStyleContext* context() const { return m_context.get(); }
+
+protected:
     GtkBorder marginBox() const;
     GtkBorder borderBox() const;
     GtkBorder paddingBox() const;
@@ -86,7 +87,7 @@ protected:
 
 class RenderThemeBoxGadget final : public RenderThemeGadget {
 public:
-    RenderThemeBoxGadget(const RenderThemeGadget::Info&, const Vector<RenderThemeGadget::Info> children, RenderThemeGadget* parent = nullptr);
+    RenderThemeBoxGadget(const RenderThemeGadget::Info&, GtkOrientation, const Vector<RenderThemeGadget::Info> children, RenderThemeGadget* parent = nullptr);
 
     IntSize preferredSize() const override;
 
@@ -94,6 +95,7 @@ public:
 
 private:
     Vector<std::unique_ptr<RenderThemeGadget>> m_children;
+    GtkOrientation m_orientation { GTK_ORIENTATION_HORIZONTAL };
 };
 
 class RenderThemeTextFieldGadget final : public RenderThemeGadget {
@@ -158,6 +160,8 @@ public:
         SecondaryForward = 1 << 3
     };
     OptionSet<Steppers> steppers() const { return m_steppers; };
+
+    void renderStepper(cairo_t*, const FloatRect&, RenderThemeGadget*, GtkOrientation, Steppers);
 
 private:
     OptionSet<Steppers> m_steppers;
